--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "variable svg icons in react",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
-  "types": "dist/types",
+  "types": "dist/typings/typing.d.ts",
   "scripts": {
     "build": "rollup -c",
-    "dev:demo": "parcel examples/index.html",
-    "build:demo": "parcel build examples/index.html",
+    "dev:demo": "parcel examples/index.html --dist-dir out",
+    "build:demo": "parcel build examples/index.html --dist-dir out",
     "start:demo": "npm run dev:demo"
   },
   "author": "fybchristasker",
@@ -18,26 +18,16 @@
     "url": "https://github.com/fybchristasker/react-common-icons"
   },
   "devDependencies": {
-    "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.0.0",
     "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-typescript": "^11.0.0",
     "@types/react": "^17.0.4",
-    "enzyme": "^3.8.0",
-    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^7.26.0",
     "eslint-plugin-react": "^7.23.2",
-    "mocha": "^5.2.0",
-    "npm-run-all": "^4.1.5",
-    "parcel-bundler": "^1.11.0",
+    "parcel": "^2.8.3",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.15.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "should": "^13.2.3",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5"
   },
