--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rollup -c",
     "dev:demo": "parcel examples/index.html --dist-dir out",
     "build:demo": "parcel build examples/index.html --dist-dir out",
-    "start:demo": "npm run dev:demo"
+    "start:demo": "npm run dev:demo",
+    "deploy:demo": "gh-pages -d out"
   },
   "author": "fybchristasker",
   "license": "MIT",
@@ -23,6 +24,7 @@
     "@types/react": "^17.0.4",
     "eslint": "^7.26.0",
     "eslint-plugin-react": "^7.23.2",
+    "gh-pages": "^5.0.0",
     "parcel": "^2.8.3",
     "process": "^0.11.10",
     "react": "^18.2.0",
